@@ -134,6 +134,14 @@ catch(std::exception& ex) { \
     [exception raise]; \
 }
 
+#define TIGHTDB_EXCEPTION_HANDLER_COLUMN_INDEX_VALID(columnIndex) \
+    if (columnIndex >= [self getColumnCount]) { \
+                        NSException* exception = [NSException exceptionWithName:@"tightdb:column_index_out_of_bounds" \
+                                reason:@"Tmmmhe specified column index is not within the table bounds" \
+                                userInfo:[NSMutableDictionary dictionary]]; \
+    [exception raise]; \
+} \
+
 #define TIGHTDB_EXCEPTION_HANDLER_CORE_EXCEPTION(action) \
 try { action } \
 catch(std::exception& ex) { \
